--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -24,3 +24,7 @@
   - 
     description: install zoxide
     command: curl -sS https://raw.githubusercontent.com/ajeetdsouza/zoxide/main/install.sh | bash
+
+- ifmacos:
+  - brew:
+    - ripgrep
