update bre file

--- a/tools/Brewfile
+++ b/tools/Brewfile
@@ -4,11 +4,16 @@ brew "exa"
 brew "fd"
 brew "git-delta"
 brew "jq"
+brew "navi"
 brew "ripgrep"
+brew "sd"
 brew "tldr"
 brew "tree"
 brew "zoxide"
+cask "maccy"
 vscode "DavidAnson.vscode-markdownlint"
+vscode "GitHub.copilot"
+vscode "GitHub.copilot-chat"
 vscode "golang.go"
 vscode "ms-python.isort"
 vscode "ms-python.python"
