update brew file

--- a/tools/Brewfile
+++ b/tools/Brewfile
@@ -10,6 +10,7 @@ brew "sd"
 brew "tldr"
 brew "tree"
 brew "zoxide"
+cask "flameshot"
 cask "maccy"
 vscode "DavidAnson.vscode-markdownlint"
 vscode "GitHub.copilot"
