--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -50,7 +50,7 @@
       - fd-find
       - tldr
       - jq
-      - eza
+      - exa
   - link:
       ~/.local/bin/delta: tools/bin/delta
   - shell:
