--- a/tools/Brewfile
+++ b/tools/Brewfile
@@ -1,21 +1,47 @@
 tap "homebrew/bundle"
+# Clone of cat(1) with syntax highlighting and Git integration
 brew "bat"
+# Modern, maintained replacement for ls
 brew "eza"
+# Simple, fast and user-friendly alternative to find
 brew "fd"
+# Command-line fuzzy finder written in Go
+brew "fzf"
+# Syntax-highlighting pager for git and diff output
 brew "git-delta"
+# Lightweight and flexible command-line JSON processor
 brew "jq"
+# LLM inference in C/C++
+brew "llama.cpp"
+# Interactive cheatsheet tool for the command-line
 brew "navi"
+# Search tool like grep and The Silver Searcher
 brew "ripgrep"
+# Intuitive find & replace CLI
 brew "sd"
+# Simplified and community-driven man pages
 brew "tldr"
+# Display directories as trees (with optional color/HTML output)
 brew "tree"
+# Internet file retriever
+brew "wget"
+# Shell extension to navigate your filesystem faster
 brew "zoxide"
+# Screenshot software
 cask "flameshot"
+# Desktop automation application
+cask "hammerspoon"
+# Keyboard shortcuts for every button on your screen
+cask "homerow"
+# Keyboard customiser
+cask "karabiner-elements"
+# Clipboard manager
 cask "maccy"
-vscode "DavidAnson.vscode-markdownlint"
-vscode "GitHub.copilot"
-vscode "GitHub.copilot-chat"
+vscode "davidanson.vscode-markdownlint"
+vscode "github.copilot"
+vscode "github.copilot-chat"
 vscode "golang.go"
+vscode "ms-python.debugpy"
 vscode "ms-python.isort"
 vscode "ms-python.python"
 vscode "ms-python.vscode-pylance"
@@ -28,4 +54,5 @@ vscode "ms-vscode-remote.remote-ssh"
 vscode "ms-vscode-remote.remote-ssh-edit"
 vscode "ms-vscode.remote-explorer"
 vscode "vscodevim.vim"
+vscode "withfig.fig"
 vscode "zxh404.vscode-proto3"
