generalize to all linux

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -33,15 +33,17 @@
       ~/.hammerspoon/init.lua: config/init.lua
     
 
-- ifdebian:
-  - sudo:
-    - apt:
-      - tree
-      - ripgrep
-      - fd-find
-      - tldr
-      - jq
-      - exa
+- ifanylinux:
+  # - sudo:
+  - apt:
+    - zsh
+    - tree
+    - ripgrep
+    - fd-find
+    - tldr
+    - jq
+    - exa
+    - bat
   - link:
       ~/.local/bin/delta: tools/bin/delta
   - shell:
@@ -51,5 +53,6 @@
     - description: install zoxide
       command: curl -sS https://raw.githubusercontent.com/ajeetdsouza/zoxide/main/install.sh | bash
 
+- ifdebian:
     - description: install bat
       command:  sudo dpkg -i tools/deb/bat-musl_0.23.0_amd64.deb
